[gd_scene load_steps=43 format=3 uid="uid://drl78uuphij1l"]

[ext_resource type="Script" path="res://LevelGenerator.gd" id="1_i8qa4"]
[ext_resource type="Script" path="res://LevelManager.gd" id="2_gm6x7"]
[ext_resource type="Script" path="res://Scripts/ConstructionGhost.gd" id="5_iwiv4"]
[ext_resource type="Script" path="res://Scripts/BuildManager.gd" id="6_y7rk5"]
[ext_resource type="Texture2D" uid="uid://d33h00t0fl7x" path="res://Defaults/Player/VestDude01.png" id="7_jr4x1"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="8_gposs"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="9_gi6l6"]
[ext_resource type="Texture2D" uid="uid://piolgplta87y" path="res://Defaults/Player/weapon_left.png" id="10_3jjqt"]
[ext_resource type="Texture2D" uid="uid://delyq5g2t13cx" path="res://Defaults/Player/weapon_right.png" id="11_4n80n"]
[ext_resource type="Script" path="res://Scripts/PlayerShooting.gd" id="11_6i2sa"]
[ext_resource type="PackedScene" uid="uid://kf2d2vvgh7l0" path="res://Defaults/Projectiles/DefaultBullet.tscn" id="12_8xasb"]
[ext_resource type="Script" path="res://Scripts/EquippedItem.gd" id="12_xwnuw"]
[ext_resource type="AudioStream" uid="uid://gdwwxc0yvg5g" path="res://Sounds/Weapons/Shooting/pistol_shot.wav" id="13_fjasp"]
[ext_resource type="AudioStream" uid="uid://cfmgnsm10aj4i" path="res://Sounds/Weapons/Reloading/pistol_reload_sound.mp3" id="14_x756n"]
[ext_resource type="Script" path="res://Scripts/ItemDetector.gd" id="15_r1xed"]
[ext_resource type="Script" path="res://Scripts/Components/ComponentInteract.gd" id="16_v28fk"]
[ext_resource type="Script" path="res://WorldGeneratorTesting/WorldGeneratorTest.gd" id="17_hkyhc"]
[ext_resource type="PackedScene" uid="uid://clhj525tmme3k" path="res://hud.tscn" id="17_qnmns"]
[ext_resource type="AudioStream" uid="uid://b1q36r8e5wmen" path="res://Sounds/Music/Just in Reach of Sirens.mp3" id="18_ddslh"]

[sub_resource type="Environment" id="Environment_aklx6"]
background_mode = 1
ambient_light_source = 1
ambient_light_energy = 0.0
reflected_light_source = 1

[sub_resource type="PlaneMesh" id="PlaneMesh_usfn3"]
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7gsdb"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mc21b"]
size = Vector3(0.3, 1, 0.55)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_drnhn"]
points = PackedVector3Array(0.15, 0.15, 0.275, -0.15, 0.15, 0.275, 0.15, -0.5, 0.275, 0.15, 0.15, -0.275, -0.15, 0.15, -0.275, -0.15, -0.5, 0.275, 0.15, -0.5, -0.275, -0.15, -0.5, -0.275)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jdgh6"]
playback_mode = 1
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("13_fjasp")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n8kat"]
playback_mode = 1
random_pitch = 1.2

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ra623"]
points = PackedVector3Array(0, 0, 0.325, -1, -1, 0.325, -1, 1, 0.325, 0, 0, -0.325, -1, -1, -0.325, -1, 1, -0.325)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_caadj"]
height = 1.0
radius = 1.5

[sub_resource type="Gradient" id="Gradient_b10ix"]
colors = PackedColorArray(0, 0.744571, 3.85046e-07, 1, 0, 0.204668, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bajek"]
gradient = SubResource("Gradient_b10ix")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_6cuyy"]
colors = PackedColorArray(0, 0, 0.745098, 1, 0, 0, 0.203922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e010p"]
gradient = SubResource("Gradient_6cuyy")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_3871w"]
colors = PackedColorArray(0.745098, 0, 0, 1, 0.203922, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o7jp0"]
gradient = SubResource("Gradient_3871w")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_dsfx5"]
colors = PackedColorArray(0.745098, 0.745098, 0, 1, 0.203922, 0.203922, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wd2j4"]
gradient = SubResource("Gradient_dsfx5")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_ruivq"]
colors = PackedColorArray(0.745098, 0.745098, 0.745098, 1, 0.203922, 0.203922, 0.203922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_imj0d"]
gradient = SubResource("Gradient_ruivq")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_ita0y"]
colors = PackedColorArray(0, 0.744571, 3.85046e-07, 1, 0, 0.204668, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w82vo"]
gradient = SubResource("Gradient_ita0y")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_1aoaa"]
colors = PackedColorArray(0, 0.25098, 0, 1, 0, 0.0823529, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3iewo"]
gradient = SubResource("Gradient_1aoaa")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="CataX" type="Node3D"]

[node name="TacticalMap" type="Node3D" parent="."]

[node name="LevelGenerator" type="Node3D" parent="TacticalMap" node_paths=PackedStringArray("level_manager", "WorldGenerator") groups=["level_generator"]]
script = ExtResource("1_i8qa4")
level_manager = NodePath("../LevelManager")
WorldGenerator = NodePath("../../WorldGenerator")
default_level_json = "res://Mods/Core/Maps/Generichouse.json"

[node name="WorldEnvironment" type="WorldEnvironment" parent="TacticalMap"]
environment = SubResource("Environment_aklx6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="TacticalMap"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.69386, 13.6025)
visible = false
light_energy = 0.028
light_cull_mask = 4293918721
directional_shadow_mode = 0
sky_mode = 1

[node name="Props" type="Node3D" parent="TacticalMap"]

[node name="LevelManager" type="Node3D" parent="TacticalMap"]
script = ExtResource("2_gm6x7")

[node name="BuildManager" type="Node3D" parent="TacticalMap" node_paths=PackedStringArray("construction_ghost", "LevelGenerator")]
script = ExtResource("6_y7rk5")
construction_ghost = NodePath("ConstructionGhost")
LevelGenerator = NodePath("../LevelGenerator")
hud = NodePath("../../HUD")

[node name="ConstructionGhost" type="MeshInstance3D" parent="TacticalMap/BuildManager" node_paths=PackedStringArray("player", "sceneCam", "buildmanager")]
editor_description = "Visualizes the construction of blocks and slopes for the player"
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_usfn3")
script = ExtResource("5_iwiv4")
player = NodePath("../../Entities/Player")
sceneCam = NodePath("../../Entities/Player/Camera3D")
buildmanager = NodePath("..")

[node name="Entities" type="Node3D" parent="TacticalMap"]

[node name="Enemies" type="Node3D" parent="TacticalMap/Entities"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4043, 0, -8.78679)

[node name="Projectiles" type="Node3D" parent="TacticalMap/Entities"]

[node name="Player" type="CharacterBody3D" parent="TacticalMap/Entities" node_paths=PackedStringArray("sprite") groups=["Players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 15)
collision_mask = 22
floor_constant_speed = true
floor_max_angle = 0.872665
script = ExtResource("8_gposs")
sprite = NodePath("Sprite3D2")

[node name="Camera3D" type="Camera3D" parent="TacticalMap/Entities/Player" groups=["Camera"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 19, 0)
current = true
size = 50.0
script = ExtResource("9_gi6l6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TacticalMap/Entities/Player"]
visible = false
material_override = SubResource("StandardMaterial3D_7gsdb")
mesh = SubResource("BoxMesh_mc21b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TacticalMap/Entities/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.100794, 0)
shape = SubResource("ConvexPolygonShape3D_drnhn")

[node name="OmniLight3D" type="OmniLight3D" parent="TacticalMap/Entities/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17078, 0)
shadow_enabled = true
omni_range = 18.071
omni_attenuation = 0.0371628

[node name="SpotLight3D" type="SpotLight3D" parent="TacticalMap/Entities/Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.89, 0)
light_energy = 7.846
shadow_enabled = true
spot_range = 5.779
spot_angle = 83.32
spot_angle_attenuation = 3.60501

[node name="Sprite3D2" type="Sprite3D" parent="TacticalMap/Entities/Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.277026, 0)
pixel_size = 0.003
texture = ExtResource("7_jr4x1")

[node name="EquippedRight" type="Sprite3D" parent="TacticalMap/Entities/Player/Sprite3D2" node_paths=PackedStringArray("projectiles", "attack_cooldown_timer", "melee_attack_area", "melee_collision_shape", "playerSprite", "shoot_audio_player", "reload_audio_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.190849, -0.123334, 0)
pixel_size = 0.002
texture = ExtResource("10_3jjqt")
script = ExtResource("12_xwnuw")
projectiles = NodePath("../../../Projectiles")
bullet_speed = 50.0
bullet_damage = 25.0
bullet_scene = ExtResource("12_8xasb")
attack_cooldown_timer = NodePath("../../Shooting/Right_attack_cooldown")
melee_attack_area = NodePath("../MeleeRange")
melee_collision_shape = NodePath("../MeleeRange/MeleeCollisionShape3D")
player = NodePath("../..")
playerSprite = NodePath("..")
hud = NodePath("../../../../../HUD")
shoot_audio_player = NodePath("../../Shooting/ShootAudio")
shoot_audio_randomizer = SubResource("AudioStreamRandomizer_jdgh6")
reload_audio_player = NodePath("../../Shooting/ReloadAudio")

[node name="EquippedLeft" type="Sprite3D" parent="TacticalMap/Entities/Player/Sprite3D2" node_paths=PackedStringArray("projectiles", "attack_cooldown_timer", "melee_attack_area", "melee_collision_shape", "playerSprite", "shoot_audio_player", "reload_audio_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.194626, 0.116675, 0)
pixel_size = 0.002
texture = ExtResource("11_4n80n")
script = ExtResource("12_xwnuw")
projectiles = NodePath("../../../Projectiles")
bullet_speed = 50.0
bullet_damage = 25.0
bullet_scene = ExtResource("12_8xasb")
attack_cooldown_timer = NodePath("../../Shooting/Left_attack_cooldown")
melee_attack_area = NodePath("../MeleeRange")
melee_collision_shape = NodePath("../MeleeRange/MeleeCollisionShape3D")
player = NodePath("../..")
playerSprite = NodePath("..")
hud = NodePath("../../../../../HUD")
equipped_left = true
shoot_audio_player = NodePath("../../Shooting/ShootAudio")
shoot_audio_randomizer = SubResource("AudioStreamRandomizer_n8kat")
reload_audio_player = NodePath("../../Shooting/ReloadAudio")

[node name="MeleeRange" type="Area3D" parent="TacticalMap/Entities/Player/Sprite3D2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.277026)
collision_mask = 14

[node name="MeleeCollisionShape3D" type="CollisionShape3D" parent="TacticalMap/Entities/Player/Sprite3D2/MeleeRange"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.277026, 0)
shape = SubResource("ConvexPolygonShape3D_ra623")

[node name="Shooting" type="Node3D" parent="TacticalMap/Entities/Player" node_paths=PackedStringArray("left_hand_item", "right_hand_item")]
script = ExtResource("11_6i2sa")
left_hand_item = NodePath("../Sprite3D2/EquippedLeft")
right_hand_item = NodePath("../Sprite3D2/EquippedRight")
player = NodePath("..")
hud = NodePath("../../../../HUD")

[node name="Left_attack_cooldown" type="Timer" parent="TacticalMap/Entities/Player/Shooting"]
one_shot = true

[node name="Right_attack_cooldown" type="Timer" parent="TacticalMap/Entities/Player/Shooting"]
one_shot = true

[node name="ShootAudio" type="AudioStreamPlayer3D" parent="TacticalMap/Entities/Player/Shooting"]
stream = ExtResource("13_fjasp")
bus = &"Sounds"

[node name="ReloadAudio" type="AudioStreamPlayer3D" parent="TacticalMap/Entities/Player/Shooting"]
stream = ExtResource("14_x756n")
bus = &"Sounds"

[node name="ItemDetector" type="Area3D" parent="TacticalMap/Entities/Player" node_paths=PackedStringArray("playernode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1205, 0)
collision_layer = 64
collision_mask = 64
script = ExtResource("15_r1xed")
playernode = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TacticalMap/Entities/Player/ItemDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.792087, 0)
shape = SubResource("CylinderShape3D_caadj")

[node name="ComponentInteract" type="Node3D" parent="TacticalMap/Entities/Player"]
script = ExtResource("16_v28fk")

[node name="WorldGenerator" type="Node3D" parent="." node_paths=PackedStringArray("level_generator", "player", "biome_chunk_parent", "elevation_chunk_parent", "region_chunk_parent")]
script = ExtResource("17_hkyhc")
level_generator = NodePath("../TacticalMap/LevelGenerator")
player = NodePath("../TacticalMap/Entities/Player")
biome_chunk_parent = NodePath("GeneratedWorld/Biomes")
elevation_chunk_parent = NodePath("GeneratedWorld/Elevation")
region_chunk_parent = NodePath("GeneratedWorld/Regions")
biome_seed = "CataX"
elevation_seed = "snipercup"
region_seed = "Dimensionfall"
load_radius = 16
temperate_sprite = SubResource("GradientTexture2D_bajek")
cold_sprite = SubResource("GradientTexture2D_e010p")
hot_sprite = SubResource("GradientTexture2D_o7jp0")
flat_sprite = SubResource("GradientTexture2D_bajek")
ocean_sprite = SubResource("GradientTexture2D_e010p")
hills_sprite = SubResource("GradientTexture2D_wd2j4")
mountains_sprite = SubResource("GradientTexture2D_o7jp0")
city_sprite = SubResource("GradientTexture2D_imj0d")
plains_sprite = SubResource("GradientTexture2D_w82vo")
forest_sprite = SubResource("GradientTexture2D_3iewo")
city_map_name = "TestCity_01.json"
plains_map_name = "TestPlains_01.json"
forest_map_name = "TestForest_01.json"

[node name="GeneratedWorld" type="Node3D" parent="WorldGenerator"]

[node name="Biomes" type="Node3D" parent="WorldGenerator/GeneratedWorld"]

[node name="Elevation" type="Node3D" parent="WorldGenerator/GeneratedWorld"]

[node name="Regions" type="Node3D" parent="WorldGenerator/GeneratedWorld"]

[node name="POIs" type="Node3D" parent="WorldGenerator/GeneratedWorld"]

[node name="Connections" type="Node3D" parent="WorldGenerator/GeneratedWorld"]

[node name="HUD" parent="." instance=ExtResource("17_qnmns")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ddslh")
volume_db = -20.15
bus = &"Music"

[node name="TestCamera" type="Camera3D" parent="."]
transform = Transform3D(-0.946576, 0, -0.32248, 0, 1, 0, 0.32248, 0, -0.946576, -20.8475, 0.21176, -31.9964)

[connection signal="update_doll" from="TacticalMap/Entities/Player" to="HUD" method="_on_player_update_doll"]
[connection signal="update_stamina_HUD" from="TacticalMap/Entities/Player" to="HUD" method="_on_player_update_stamina_hud"]
[connection signal="ammo_changed" from="TacticalMap/Entities/Player/Sprite3D2/EquippedRight" to="HUD" method="_on_shooting_ammo_changed"]
[connection signal="ammo_changed" from="TacticalMap/Entities/Player/Sprite3D2/EquippedLeft" to="HUD" method="_on_shooting_ammo_changed"]
[connection signal="timeout" from="TacticalMap/Entities/Player/Shooting/Left_attack_cooldown" to="TacticalMap/Entities/Player/Sprite3D2/EquippedLeft" method="_on_left_attack_cooldown_timeout"]
[connection signal="timeout" from="TacticalMap/Entities/Player/Shooting/Right_attack_cooldown" to="TacticalMap/Entities/Player/Sprite3D2/EquippedRight" method="_on_right_attack_cooldown_timeout"]
[connection signal="area_entered" from="TacticalMap/Entities/Player/ItemDetector" to="TacticalMap/Entities/Player/ItemDetector" method="_on_area_entered"]
[connection signal="area_exited" from="TacticalMap/Entities/Player/ItemDetector" to="TacticalMap/Entities/Player/ItemDetector" method="_on_area_exited"]
[connection signal="construction_chosen" from="HUD" to="TacticalMap/BuildManager" method="_on_hud_construction_chosen"]
